--- a/Pipfile
+++ b/Pipfile
@@ -18,5 +18,10 @@ flask-cors = "*"
 protobuf = "*"
 python-dotenv = "*"
 
+[scripts]
+server = "flask run"
+init_db = "python -m content_creation_db.db.main"
+gen_proto = "protoc --python_out='.' content_creation_db/protos/*.proto"
+
 [requires]
 python_version = "3.6"
